Make sure the timelime is shown on mobiles

--- a/src/plugin.less
+++ b/src/plugin.less
@@ -11,6 +11,12 @@
 	}
 }
 
+.onwindy-plugin-sounding.wsp-mobile {
+	.left-border {
+    left: 0;
+  }
+}
+
 #windy-plugin-sounding {
   font-size: 12px;
   padding: 1em 1em;
